@@ -21,7 +21,11 @@ Summary of important user-visible changes for version 6 (yyyy-mm-dd):
   rendering of characters.  The default is "on" which produces smooth,
   more visually appealing text.
 
-- The graphics properties `"pointer"`, `"pointershapecdata"`, and
+- The figure property `"windowscrollwheelfcn"`is now implemented.
+  This makes it possible to provide a callback function to be executed when
+  users manipulate the mouse wheel on a given figure.
+
+- The figure properties `"pointer"`, `"pointershapecdata"`, and
   `"pointershapehotspot"` are now implemented.  This makes it possible
   to change the shape of the cursor (pointer in Matlab-speak) displayed
   in a plot window.
